--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -43,7 +43,7 @@
         <option value="pet">Pet</option>
         <option value="eletronicos">Eletrônicos</option>
         <option value="moda">Moda</option>
-        <option value="automotivo">automotivo</option>
+        <option value="automotivo">Automotivo</option>
         <option value="fitness">Fitness</option>
         <option value="casa">Casa e Decoração</option>
         <option value="beleza">Beleza</option>
