--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
       <li class="category-item" data-categoria="pet" aria-label="Filtrar por pet shop">
         <i class="fas fa-paw"></i> Pet Shop
       </li>
+      <li class="category-item" data-categoria="Celulares" aria-label="Filtrar por celulares">
+        <i class="fas fa-mobile-alt"></i> Celulares
+      </li>
     </ul>
   </aside>
 
