--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           <span><i class="fas fa-envelope"></i> centralxdecompras@gmail.com</span>
         </div>
         <div class="header-links">
-          <a href="#cupons" class="header-link"><i class="fas fa-tags"></i> Cupons</a>
-        </div>
+  <a href="cupom.html" class="header-link"><i class="fas fa-tags"></i> Cupons</a>
+</div>
       </div>
     </div>
     
