--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="container">
         <div class="header-info">
           <span><i class="fas fa-phone-alt"></i> (21) 99812-3073</span>
-          <span><i class="fas fa-envelope"></i> centralxdecompras@gmail.com</span>
+          <span><i class="fas fa-envelope"></i> centrodecompracontato@gmail.com</span>
         </div>
         <div class="header-links">
   <a href="cupom.html" class="header-link"><i class="fas fa-tags"></i> Cupons</a>
