--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     <div class="footer-bottom">
       <div class="container">
         <div class="footer-disclaimer">
-          <p><i class="fas fa-info-circle"></i> Este site contém links de afiliados. Podemos receber comissões.</p>
+          <p><i class="fas fa-info-circle"></i> Aviso: Somos um site de afiliados. Ao comprar pelos nossos links, podemos receber comissão, mas o preço é o mesmo para você, sem custo extra.</p>
         </div>
         <div class="footer-copyright">
           <p>&copy; <span id="year">2025</span> Centro de Compra.</p>
