--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <a href="#inicio" class="nav-link active">Início</a>
           <a href="#ofertas" class="nav-link">Ofertas</a>
           <a href="#lojas" class="nav-link">Lojas</a>
-          <a href="#contato" class="nav-link">Contato</a>
+          <a href="contato.html" class="nav-link">Contato</a>
         </div>
       </div>
     </nav>
