--- a/contato.html
+++ b/contato.html
@@ -56,8 +56,8 @@
 
   <main>
     <h2>📞 Fale Conosco</h2>
-    <p><strong>WhatsApp:</strong> <a href="https://wa.me/5521975179737" target="_blank">(21) 97517-9737</a></p>
-    <p><strong>E-mail:</strong> <a href="mailto:centraxdecompras@gmail.com.br">centralxdecompras@gmail.com</a></p>
+    <p><strong>WhatsApp:</strong> <a href="https://wa.me/5521998123073" target="_blank">(21) 998123073</a></p>
+    <p><strong>E-mail:</strong> <a href="mailto:centrodecompracontato@gmail.com">centralxdecompras@gmail.com</a></p>
     <p><strong>Instagram:</strong> <a href="https://www.instagram.com/SEU_USUARIO" target="_blank">em manutenção</a></p>
     <p><strong>Endereço:</strong> Rua Marechal Raul de Albuquerquen 2- Niteroi, Rio de Janeiro - RJ</p>
   </main>
@@ -66,4 +66,5 @@
     <p>&copy; 2025 Central de Compra</p>
   </footer>
 </body>
+
 </html>
