--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sobre - Central de Compras</title>
+  <title>Sobre e Política de Privacidade - Central de Compras</title>
   <style>
     body {
       font-family: 'Times New Roman', serif;
@@ -22,7 +22,7 @@
 
     main {
       padding: 20px;
-      max-width: 800px;
+      max-width: 900px;
       margin: auto;
       background-color: white;
       border-radius: 8px;
@@ -37,29 +37,55 @@
       font-size: 18px;
       line-height: 1.6;
     }
+
+    section {
+      margin-bottom: 30px;
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1>Sobre Nós</h1>
+    <h1>Central de Compras</h1>
   </header>
 
   <main>
-    <h2>Quem somos</h2>
-    <p>
-      O <strong>Central de Compra</strong> é um portal criado para ajudar você a encontrar as melhores promoções e ofertas reais
-      nas maiores lojas do Brasil e do mundo. Trabalhamos com links seguros e atualizados de plataformas como Amazon, Magalu, Shopee, Shein, Mercado Livre e muito mais.
-    </p>
+    <section>
+      <h2>Quem somos</h2>
+      <p>
+        O <strong>Central de Compra</strong> é um portal criado para ajudar você a encontrar as melhores promoções e ofertas reais
+        nas maiores lojas do Brasil e do mundo. Trabalhamos com links seguros e atualizados de plataformas como Amazon, Magalu, Shopee, Shein, Mercado Livre e muito mais.
+      </p>
+    </section>
 
-    <h2>Nosso objetivo</h2>
-    <p>
-      Queremos facilitar sua vida na hora de comprar online. A gente busca, seleciona e compartilha as melhores ofertas todos os dias, para que você economize com segurança e praticidade.
-    </p>
+    <section>
+      <h2>Nosso objetivo</h2>
+      <p>
+        Queremos facilitar sua vida na hora de comprar online. A gente busca, seleciona e compartilha as melhores ofertas todos os dias, para que você economize com segurança e praticidade.
+      </p>
+    </section>
 
-    <h2>Transparência</h2>
-    <p>
-      Utilizamos links de afiliados. Isso significa que, ao comprar através dos nossos links, você nos ajuda a manter o projeto — e o melhor: sem pagar nada a mais por isso!
-    </p>
+    <section>
+      <h2>Transparência</h2>
+      <p>
+        Utilizamos links de afiliados. Isso significa que, ao comprar através dos nossos links, você nos ajuda a manter o projeto — e o melhor: sem pagar nada a mais por isso!
+      </p>
+    </section>
+
+    <section>
+      <h2>Política de Privacidade</h2>
+      <p>
+        A sua privacidade é importante para nós. Todas as informações coletadas em nosso site têm como objetivo melhorar sua experiência de navegação e oferecer promoções mais relevantes.
+      </p>
+      <p>
+        Não compartilhamos dados pessoais com terceiros. Caso utilize formulários ou entre em contato conosco, suas informações serão utilizadas apenas para fins de comunicação relacionados ao <strong>Central de Compras</strong>.
+      </p>
+      <p>
+        Podemos utilizar cookies para armazenar preferências de navegação e estatísticas de acesso. Você pode desativá-los a qualquer momento nas configurações do seu navegador.
+      </p>
+      <p>
+        Ao continuar utilizando nosso site, você concorda com esta política de privacidade. Eventuais alterações nesta política serão atualizadas nesta página.
+      </p>
+    </section>
   </main>
 
   <footer>
