--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           <li><a href="#termos">Termos de Uso</a></li>
           <li><a href="#privacidade">Política de Privacidade</a></li>
           <li><a href="#faq">FAQ</a></li>
-          <li><a href="#suporte">Suporte</a></li>
+          <li><a href="contato.html">Suporte</a></li>
         </ul>
       </div>
       <div class="footer-section">
