--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <h4>Links Úteis</h4>
         <ul>
           <li><a href="#termos">Termos de Uso</a></li>
-          <li><a href="#privacidade">Política de Privacidade</a></li>
+          <li><a href="privacidade">Política de Privacidade</a></li>
           <li><a href="#faq">FAQ</a></li>
           <li><a href="contato.html">Suporte</a></li>
         </ul>
