--- a/contato.html
+++ b/contato.html
@@ -57,7 +57,7 @@
   <main>
     <h2>📞 Fale Conosco</h2>
     <p><strong>WhatsApp:</strong> <a href="https://wa.me/5521998123073" target="_blank">(21) 998123073</a></p>
-    <p><strong>E-mail:</strong> <a href="mailto:centrodecompracontato@gmail.com">centralxdecompras@gmail.com</a></p>
+    <p><strong>E-mail:</strong> <a href="mailto:centrodecompracontato@gmail.com">centrodecompracontato@gmail.com</a></p>
     <p><strong>Instagram:</strong> <a href="https://www.instagram.com/SEU_USUARIO" target="_blank">em manutenção</a></p>
     <p><strong>Endereço:</strong> Rua Marechal Raul de Albuquerquen 2- Niteroi, Rio de Janeiro - RJ</p>
   </main>
@@ -68,3 +68,4 @@
 </body>
 
 </html>
+
