--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sobre e Política de Privacidade - Central de Compras</title>
+  <title>Sobre e Política de Privacidade - Central de Compra</title>
   <style>
     body {
       font-family: 'Times New Roman', serif;
@@ -93,3 +93,4 @@
   </footer>
 </body>
 </html>
+
