--- a/sobre.html
+++ b/sobre.html
@@ -77,7 +77,7 @@
         A sua privacidade é importante para nós. Todas as informações coletadas em nosso site têm como objetivo melhorar sua experiência de navegação e oferecer promoções mais relevantes.
       </p>
       <p>
-        Não compartilhamos dados pessoais com terceiros. Caso utilize formulários ou entre em contato conosco, suas informações serão utilizadas apenas para fins de comunicação relacionados ao <strong>Central de Compras</strong>.
+        Não coletamos dados pessoais . Caso utilize formulários ou entre em contato conosco, suas informações serão utilizadas apenas para fins de comunicação relacionados ao <strong>Centro de Compra</strong>.
       </p>
       <p>
         Podemos utilizar cookies para armazenar preferências de navegação e estatísticas de acesso. Você pode desativá-los a qualquer momento nas configurações do seu navegador.
@@ -89,8 +89,9 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Central de Compra - Todos os direitos reservados</p>
+    <p>&copy; 2025 Centro de Compra - Todos os direitos reservados</p>
   </footer>
 </body>
 </html>
+
 
