--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
   
+  <!-- Google AdSense Script -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9781903408224276"
+          crossorigin="anonymous"></script>
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="logos/favicon.ico" type="image/x-icon" />
@@ -198,7 +202,20 @@
         <div class="section-header">
           <h2 id="ofertas-titulo">🔥 Produtos em Destaque</h2>
         </div>
-        
+
+        <!-- Google AdSense Ad Unit -->
+        <div class="ad-container" style="margin: 20px auto; text-align: center;">
+          <ins class="adsbygoogle"
+               style="display:block"
+               data-ad-client="ca-pub-9781903408224276"
+               data-ad-slot="YOUR_AD_SLOT_ID"
+               data-ad-format="auto"
+               data-full-width-responsive="true"></ins>
+          <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+        </div>
+
         <div class="loading-container" id="loading-spinner">
           <div class="loading-spinner">
             <div class="spinner"></div>
