--- a/contato.html
+++ b/contato.html
@@ -63,10 +63,11 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Central de Compra</p>
+    <p>&copy; 2025 Centro de Compra</p>
   </footer>
 </body>
 
 </html>
+
 
 
