--- a/index.html
+++ b/index.html
@@ -272,13 +272,13 @@
       <div class="footer-section">
         <h4>Siga-nos</h4>
         <div class="social-links">
-          <a href="https://instagram.com/centrodecompra" class="social-link" aria-label="Instagram" target="_blank" rel="noopener">
+          <a href="https://www.instagram.com/cdccentrodecompra/" class="social-link" aria-label="Instagram" target="_blank" rel="noopener">
             <img src="logos/instagram.png" alt="Instagram" class="social-icon" />
           </a>
-          <a href="https://facebook.com/centrodecompra" class="social-link" aria-label="Facebook" target="_blank" rel="noopener">
-            <img src="logos/facebook.png" alt="Facebook" class="social-icon" />
+          <a href="x.com/ComprasCdc" class="social-link" aria-label="X" target="_blank" rel="noopener">
+            <img src="logos/X.png" alt="X" class="social-icon" />
           </a>
-          <a href="https://youtube.com/centrodecompra" class="social-link" aria-label="YouTube" target="_blank" rel="noopener">
+          <a href="https://www.youtube.com/@CentrodeComprasCdC" class="social-link" aria-label="YouTube" target="_blank" rel="noopener">
             <img src="logos/youtube.png" alt="YouTube" class="social-icon" />
           </a>
           <a href="https://tiktok.com/@centrodecompra" class="social-link" aria-label="TikTok" target="_blank" rel="noopener">
