--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           <a href="https://www.instagram.com/cdccentrodecompra/" class="social-link" aria-label="Instagram" target="_blank" rel="noopener">
             <img src="logos/instagram.png" alt="Instagram" class="social-icon" />
           </a>
-          <a href="x.com/ComprasCdc" class="social-link" aria-label="X" target="_blank" rel="noopener">
+          <a href="https://x.com/ComprasCdc" class="social-link" aria-label="X" target="_blank" rel="noopener">
             <img src="logos/X.png" alt="X" class="social-icon" />
           </a>
           <a href="https://www.youtube.com/@CentrodeComprasCdC" class="social-link" aria-label="YouTube" target="_blank" rel="noopener">
